Attempt recovery of WASAPI audio output driver during Start().

Per Microsoft, IAudioClient/IAudioRenderClient may be invalidated
at any time; even when we're not using them. If this occurs after
a Stop() event, we won't find out until the next Start() and will
subsequently fail (triggering an unrecoverable playback error; we
only have fallback for Open() failures).

Instead if we detect that either client has an error during Start(),
we will now re-attempt Open() and subsequently retry creation of the
clients. If this still fails, we'll then continue down the old path
of signaling an unrecoverable playback error.

BUG=803691
TEST=switching audio devices does recovers IAudioClient.

Change-Id: I54f0377a483bcd4dca91e8cb82fe4e46366731fa